--- a/lottusse-backend/src/main/resources/application-local.properties
+++ b/lottusse-backend/src/main/resources/application-local.properties
@@ -1,12 +1,14 @@
 spring.application.name=LottuseBackend
+ALLOWED_ORIGIN=${ALLOWED_ORIGIN}
 
 # MySQL Configuration
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Redis Configuration
 spring.redis.host=${REDIS_HOST}
