Update property settings for ActiveMQ and Redis in application-local.properties

--- a/lottusse-backend/src/main/resources/application-local.properties
+++ b/lottusse-backend/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
 spring.application.name=LottuseBackend
-ALLOWED_ORIGIN=${ALLOWED_ORIGIN}
+spring.activemq.broker-url=${ALLOWED_ORIGIN}
 
 # MySQL Configuration
 spring.datasource.url=${DB_URL}
@@ -11,7 +11,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Redis Configuration
-spring.redis.host=${REDIS_HOST}
-spring.redis.port=${REDIS_PORT}
-spring.redis.timeout=2000
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.timeout=2000
 
