Refactor environment settings and properties to improve variable management and add support for multiple environments

--- a/lottusse-backend/.env
+++ b/lottusse-backend/.env
@@ -1,16 +1,13 @@
 # CORS Configuration
-ALLOWED_ORIGIN=http://localhost:3000
+FRONTEND_URL=http://localhost:3001
 
 # MySQL configuration
 DB_URL=jdbc:mysql://localhost:3306/lottussedb
 
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=Melendre14*
+DB_DRIVER=com.mysql.cj.jdbc.Driver
 
 # Redis configuration
 REDIS_HOST=localhost
 REDIS_PORT=6380
-
-# Spring Boot Configuration
-SPRING_PROFILES_ACTIVE=local
-SERVER_PORT=8080
