--- a/lottusse-backend/src/main/resources/application-local.properties
+++ b/lottusse-backend/src/main/resources/application-local.properties
@@ -4,11 +4,11 @@ spring.activemq.broker-url=${ALLOWED_ORIGIN}
 # MySQL Configuration
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=${DB_DRIVER}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Redis Configuration
 spring.data.redis.host=${REDIS_HOST}
