--- a/lottusse-backend/src/main/resources/application-production.properties
+++ b/lottusse-backend/src/main/resources/application-production.properties
@@ -1,14 +1,11 @@
 spring.application.name=LottuseBackend
+spring.activemq.broker-url=${ALLOWED_ORIGIN}
 
 # MySQL Configuration
-spring.datasource.url=jdbc:mysql://production-db-url:3308/lottussedb
-spring.datasource.username=
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=${DB_DRIVER}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-# Redis Configuration
-spring.redis.host=
-spring.redis.port=6379
-spring.redis.timeout=2000
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
