--- a/lottusse-backend/.env
+++ b/lottusse-backend/.env
@@ -1,5 +1,6 @@
 # CORS Configuration
-FRONTEND_URL=http://localhost:3001
+FRONTEND_URL=http://localhost:3000
+ALLOWED_ORIGIN=http://localhost:3000
 
 # MySQL configuration
 DB_URL=jdbc:mysql://localhost:3306/lottussedb
